--- a/giocoQuadrato/game.html
+++ b/giocoQuadrato/game.html
@@ -1,13 +1,21 @@
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="mystyle.css">
-	<title>Gabriele's Game</title>
-</head>
-<body onkeydown="getKeyCod()">
-<script src="myscript.js"></script>
-<div id="player" class="cube"></div>
 
-  <div id="enemy" class="enem"></div>
-  
-  </body>
+<head>
+  <title>Gabriele's Game</title>
+</head>
+
+<body onkeydown="getKeyCode()">
+
+  <span id="player" class="player">
+    <div class="load-wrapp">
+      <div class="load-3">
+        <p>Player</p>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>      
+      </div>
+    </div>
+  </span>
+</body>
+
 </html>
